Added functionalities to toolbox icon and drag and drop feature sticky notes.

--- a/index.html
+++ b/index.html
@@ -45,17 +45,8 @@
         <input type="range" id="" min="2" max="10" value="3" />
       </div>
     </div>
-
-    <!-- <div class="sticky-cont">
-      <div class="sticky-header">
-        <div class="minimizenote"></div>
-        <div class="removenote"></div>
-      </div>
-      <div class="sticky-text">
-        <textarea></textarea>
-      </div>
-    </div> -->
-
+    <canvas></canvas>
+    <script src="./canvas.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
