configured url and port

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      let socket = io.connect('http://localhost:5000')
+      let socket = io.connect('https://drawitnow.herokuapp.com/')
     </script>
     <script src="./script.js"></script>
     <script src="./canvas.js"></script>
